Fixed context menu item sizes for better clickability on iOS

--- a/assets/blockly/styles/style.css
+++ b/assets/blockly/styles/style.css
@@ -45,6 +45,14 @@ body,
   padding-left: constant(safe-area-inset-left);
 }
 
+div.blocklyWidgetDiv .goog-menuitem {
+  padding: 10px 7em 10px 28px;
+}
+
+div.blocklyWidgetDiv .goog-menuitem-content {
+  font-size: 16px;
+}
+
 @media screen and (min-width: 768px) {
   .swal2-popup.swal2-modal.focused {
     position: relative;
